# MultiAgent

./: .gitignore  app.py  database.py  export_graph.py  graph.py  intent_utils.py  llm_config.py  main.py  mcp_server.py  middleware.py  print_graph.py  prompt_loader.py  pyproject.toml  rag.py  test_agents.py  test_email.py  tools.py  update_chat_memory.py
agents/: admin_agent.py  agent_utils.py  approval_agent.py  email_agent.py  hr_agent.py  it_agent.py  rag_agent.py  records_agent.py
data/: enterprise.db  hr_policy.txt  it_policy.txt
data/chroma_db/: chroma.sqlite3
prompts/: admin_agent_prompt.txt  approval_agent_prompt.txt  email_agent_prompt.txt  hr_agent_prompt.txt  it_agent_prompt.txt  rag_agent_prompt.txt  router_prompt.txt
