[project]
name = "multiagententerprise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "fastmcp>=3.2.4",
    "langchain>=1.2.15",
    "langgraph>=1.1.9",
    "langsmith>=0.7.37",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
